# dds-on-hardware

./: .gitmodules  LICENSE  README.md  cycloneDDS_installation
Docker/: Dockerfile  ddsSetupScript
Notable/notes/: Cross Communication.md  Late-Joiner.md  Log Book.md  Meetings with MiR.md  Meetings with Tórur.md  Motivation.md  QA.md  Requirements Specification.md  Test Describtion.md  Test Results (FastDDS).md  Test Results.md  Things to look into.md
data_backup/Laptop/FastDDS/rw_BF/: test_4.txt  test_6.txt
data_backup/Laptop/FastDDS/rw_reliable/: test_2.txt  test_4.txt  test_5.txt  test_6.txt
data_backup/pi2/rw_Reliabe/data/: test_1.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt
data_backup/pi2/rw_bf/data/: test_1.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt
data_backup/pi4/FastDDS/rw_BF/: test_1.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt
data_backup/pi4/FastDDS/rw_reliable/: test_1.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt
data_plotting/ReadWrite/: plots.py  plots_max100.py
data_plotting/history_speed/: plots.py
data_plotting/idlsize/: plots.py  plots_2.py  plots_3.py
dds_test/FastDDS/cmake_simple/: CMakeLists.txt
dds_test/FastDDS/cmake_simple/src/: HelloWorld.cxx
dds_test/FastDDS/helloworld/: MyType.cxx  MyType.h  MyType.idl  MyTypePubSubMain.cxx  MyTypePubSubTypes.cxx  MyTypePubSubTypes.h  MyTypePublisher.cxx  MyTypePublisher.h  MyTypeSubscriber.cxx  MyTypeSubscriber.h  makefile_x64Linux2.6gcc
dds_test/FastDDS/multipleFiles/src/: HelloWorldPublisher.cpp  HelloWorldPublisher_2.cpp  HelloWorldPublisher_3.cpp  HelloWorldPublisher_4.cpp  HelloWorldPublisher_5.cpp  HelloWorldPublisher_6.cpp  HelloWorldSubscriber_2.cpp  HelloWorldSubscriber_3.cpp  HelloWorldSubscriber_4.cpp  HelloWorldSubscriber_5.cpp  HelloWorldSubscriber_6.cpp  cleanSRC_memoryTest
dds_test/RTI_Connext/Test/make/: makefile_HelloWorld_x64Linux4gcc7.3.0
dds_test/RTI_Connext/Test/src/: HelloWorld.c  HelloWorld.h  HelloWorldPlugin.c  HelloWorldPlugin.h  HelloWorldSupport.c  HelloWorldSupport.h  HelloWorld_publisher.c  HelloWorld_subscriber.c
dds_test/RTI_Connext/test_cpp/src/: HelloWorld_publisher.cxx  (+1 more)
dds_test/data_filtering_and_speration/: CMakeLists.txt  TestDataType.idl  multiReader.c  publisher.c  publisher_instances.c  subscriber.c  subscriber_NotDelayed.c
dds_test/helloworld/: CMakeLists.txt
dds_test/historyTest/: CMakeLists.txt  TestDataType.idl  publisher.c  publisher_instances.c  subscriber.c  subscriber_NotDelayed.c
dds_test/historyTopicTest/: CMakeLists.txt  publisher.c  publisher_instance.c  subscriber.c  subscriber_NotDelayed.c
dds_test/listner_waitsets_conditions/: CMakeLists.txt  TestDataType.idl  publisher_instances.c  publisher_slow.c  subscriber.c  subscriber_NotDelayed.c  subscriber_listener.c
dds_test/memoryTest/: publisher.c  subscriber.c
dds_test/pubSubLoop/: PubSubLoopData.idl  publisher.c  subscriber.c
dds_test/pubSubLoop_instanceTest/: CMakeLists.txt  publisher.c  subscriber.c
dds_test/pubSubLoop_instanceTest_gpp/: CMakeLists.txt  PubSubLoopData.idl  publisher.cpp  subscriber.cpp
dds_test/simplePingPong/: CMakeLists.txt  pingSimple.c  pongSimple.c  pongSimpleBAK.c  simplePingPongData.idl
performance_tests/CycloneDDS/: listener_callback_prototypes.c
performance_tests/CycloneDDS/Late_Joiner/: CMakeLists.txt  TestDataType.idl  TestDataType_Speed.idl  publisher.c  publisher_1.c  runTests  subscriber_1.c  subscriber_listener.c  subscriber_listener2.c
performance_tests/CycloneDDS/Late_Joiner/data/: statistical_analysis.py  test_1_old.txt  test_DEPTH100.txt  test_DEPTH100_128000.txt  test_DEPTH100_384000.txt  test_DEPTH100_notOverRouter.txt  test_DEPTH100_old.txt
performance_tests/CycloneDDS/Late_Joiner_Polling/: CMakeLists.txt  publisher.c  subscriber.c  subscriber_NotDelayed.c  subscriber_listener.c
performance_tests/CycloneDDS/idlSizeTest/: CMakeLists.txt  TestDataType.idl  publisher.c  subscriber_listener.c
performance_tests/CycloneDDS/writingSpeedTest/: CMakeLists.txt  TestDataType.idl  TestDataType_100.idl  TestDataType_150.idl  TestDataType_200.idl  TestDataType_3.idl  TestDataType_4.idl  TestDataType_Large.idl  TestDataType_Medium.idl  publisher.c  publisher_1.c  publisher_100.c  publisher_150.c  publisher_2.c  publisher_200.c  publisher_3.c  publisher_4.c  publisher_5.c  publisher_6.c  publisher_large.c  publisher_medium.c  runTests  subscriber_1.c  subscriber_100.c  subscriber_150.c  subscriber_2.c  subscriber_200.c  subscriber_3.c  subscriber_4.c  subscriber_5.c  subscriber_6.c  subscriber_large.c  subscriber_listener.c  subscriber_medium.c
performance_tests/CycloneDDS/writingSpeedTest/data/: runTests  statistical_analysis.py  test_1.txt  test_2.txt  test_2_bytes.txt  test_2_bytes_23-10.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt  test_8_bytes_23-10.txt
performance_tests/CycloneDDS/writingSpeedTest_BF/: TestDataType_2.idl  TestDataType_5.idl  publisher_1.c  publisher_2.c  publisher_3.c  publisher_4.c  publisher_5.c  publisher_6.c  runTests  subscriber_1.c  subscriber_2.c  subscriber_3.c  subscriber_4.c  subscriber_5.c  subscriber_6.c
performance_tests/FastDDS/LateJoinerSpeed/: runTests
performance_tests/FastDDS/writeSpeedTest/: runTests
performance_tests/cross_communication/cyclone/: CMakeLists.txt  TestDataType.idl  publisher.c  publisher_instances.c  subscriber_listener.c
pi2/: ddsSetupScript_forPI
pi2/performance_tests/idlSizeTest/: CMakeLists.txt  TestDataType.idl  publisher.c  subscriber_listener.c
pi2/performance_tests/writingSpeedTest/: CMakeLists.txt  TestDataType_6.idl  publisher_1.c  publisher_2.c  publisher_3.c  publisher_4.c  publisher_5.c  publisher_6.c  subscriber_1.c  subscriber_2.c  subscriber_3.c  subscriber_4.c  subscriber_5.c  subscriber_6.c
pi2/performance_tests/writingSpeedTest_BF/: TestDataType.idl  publisher_1.c  publisher_2.c  publisher_3.c  publisher_4.c  publisher_5.c  publisher_6.c  subscriber_1.c  subscriber_2.c  subscriber_3.c  subscriber_4.c  subscriber_5.c  subscriber_6.c
(+230 files in other folders)
